# TripleLens

./: .gitignore  CMakeLists.txt  README.md  main.cc  makefile
CCC/: ccc.cc  ccc.h  makefile
Examples/: ctypes_classes.py  run_amoebae.py  run_amoebae_164_merged.py  run_amoebae_190.py  run_amoebae_79.py  run_amoebae_full.py  run_ampmap.py  run_asynccudalib.py  run_ccclib.py  run_cudalib.py  run_cudalib_benchmark_kkuang.py  run_imglib.py  run_lagdiag.py  run_lclib.py  run_lclib_binary.py  run_lcpoint.py  run_limb_darkening.py  run_metropolis_kuang.py  run_point_metropolis.py
Examples/Article_Figs/: Amoeba_Article_190  Amoeba_Article_79  run_amoebae_79.py
Examples/Article_Figs/BigSourceFigs/largeSource/: Amoeba_10  Amoeba_100  Amoeba_101  Amoeba_103  Amoeba_105  Amoeba_106  Amoeba_11  Amoeba_110  Amoeba_113  Amoeba_114  Amoeba_116  Amoeba_120  Amoeba_121  Amoeba_123  Amoeba_124  Amoeba_128  Amoeba_129  Amoeba_13  Amoeba_131  Amoeba_134  Amoeba_135  Amoeba_138  Amoeba_139  Amoeba_140  Amoeba_141  Amoeba_145  Amoeba_146  Amoeba_147  Amoeba_149  Amoeba_150  Amoeba_151  Amoeba_152  Amoeba_153  Amoeba_154  Amoeba_156  Amoeba_158  Amoeba_159  Amoeba_161  Amoeba_163  Amoeba_165  (+63 more)
Examples/Article_Figs/DifferentSizes/SmallSourceFig/: Amoeba_0  Amoeba_101  Amoeba_102  Amoeba_103  Amoeba_104  Amoeba_105  Amoeba_106  Amoeba_107  Amoeba_108  Amoeba_11  Amoeba_110  Amoeba_111  Amoeba_112  Amoeba_114  Amoeba_115  Amoeba_117  Amoeba_119  Amoeba_120  Amoeba_124  Amoeba_127  Amoeba_129  Amoeba_130  Amoeba_132  Amoeba_136  Amoeba_137  Amoeba_138  Amoeba_14  Amoeba_140  Amoeba_145  Amoeba_15  Amoeba_150  Amoeba_151  Amoeba_153  Amoeba_154  Amoeba_155  Amoeba_156  Amoeba_158  Amoeba_159  Amoeba_160  Amoeba_161  (+63 more)
Examples/Article_Figs/DifferentSizes/clusteredboundaries/: Amoeba_big_164  Amoeba_small_164  Amoeba_small_165  clustered_boundaries_big_164_0  clustered_boundaries_big_164_1  clustered_boundaries_big_164_2  clustered_boundaries_big_164_3  clustered_boundaries_big_164_4  clustered_boundaries_big_164_5  clustered_boundaries_big_165_0  clustered_boundaries_big_165_1  clustered_boundaries_big_165_2  clustered_boundaries_big_165_3  clustered_boundaries_big_165_4  clustered_boundaries_big_165_5  clustered_boundaries_small_164_0  clustered_boundaries_small_164_1  clustered_boundaries_small_164_2  clustered_boundaries_small_164_3  clustered_boundaries_small_164_4  clustered_boundaries_small_165_0  clustered_boundaries_small_165_1  clustered_boundaries_small_165_2  clustered_boundaries_small_165_3  run_amoebae_164.py  run_amoebae_164_merged.py  run_amoebae_165.py  run_amoebae_165_merged.py
Examples/Article_Figs/DifferentSizes/largeSource/: Amoeba_0  Amoeba_1  Amoeba_102  Amoeba_104  Amoeba_107  Amoeba_108  Amoeba_109  Amoeba_111  Amoeba_112  Amoeba_115  Amoeba_117  Amoeba_118  Amoeba_119  Amoeba_12  Amoeba_122  Amoeba_125  Amoeba_126  Amoeba_127  Amoeba_130  Amoeba_132  Amoeba_133  Amoeba_136  Amoeba_137  Amoeba_14  Amoeba_142  Amoeba_143  Amoeba_144  Amoeba_148  Amoeba_15  Amoeba_155  Amoeba_157  Amoeba_16  Amoeba_160  Amoeba_162  Amoeba_166  Amoeba_17  Amoeba_170  Amoeba_171  Amoeba_174  Amoeba_175  (+59 more)
Examples/Article_Figs/SmallSourceFig/: Amoeba_1  Amoeba_10  Amoeba_100  Amoeba_109  Amoeba_113  Amoeba_116  Amoeba_118  Amoeba_12  Amoeba_121  Amoeba_122  Amoeba_123  Amoeba_125  Amoeba_126  Amoeba_128  Amoeba_13  Amoeba_131  Amoeba_133  Amoeba_134  Amoeba_135  Amoeba_139  Amoeba_141  Amoeba_142  Amoeba_143  Amoeba_144  Amoeba_146  Amoeba_147  Amoeba_148  Amoeba_149  Amoeba_152  Amoeba_157  Amoeba_16  Amoeba_164  Amoeba_168  Amoeba_169  Amoeba_170  Amoeba_171  Amoeba_172  Amoeba_173  Amoeba_176  Amoeba_177  (+57 more)
Examples/Coffee_figs/: amplification_map_close.eps  amplification_map_wide.eps  run_ampmap.py  run_ampmap_close.py  run_ampmap_wide.py
Images/: imgpoint.cc  imgpoint.h  imgpointcoeff.cc
Laguerre/: laguerre.cc  laguerre.h
LensCore/: lens.cc  lens.h
LightCurves/: lcbase.cc  lcbase.h  lcirs.cc  lcirs.h  makefile
Utils/: amoeba.cc  amoeba.h  makefile  utils.h
src/: CMakeLists.txt  main.cc
src/Benchmarks/KuangPolCoeffs/: imgpointcoeffkuang.cc  imgpointcoeffkuang.h  kuangtest  makefile  test_kuang.cc
src/CCC/: ccc.cc  makefile
src/Cuda/: cudairs.cu  cudairs.cuh  cudalc.cc  cudalc.h  cudapointcollector.cc  cudapointcollector.h
src/Images/: imgpoint.cc  imgpoint.h  imgpointcoeff.cc  makefile  test_kuang.cc
src/Laguerre/: laguerre.cc  laguerre.h  makefile
src/LensCore/: lens.h
src/LightCurves/: lcbase.cc  lcbase.h  lcirs.cc  lcirs.h
src/LimbDarkening/: limbdarkeningmodel.cc  limbdarkeningmodel.h
src/Utils/: amoeba.cc  amoeba.h
tests/: CMakeLists.txt  laguerretest.cc
